# simult-chess

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
docs/: DEVELOPMENT.md  INVARIANTS.md  LEARNING_DESIGN.md  simultaneous_chess_spec_v1.md
reports/: campaign_v1.md  learning_v1.md
scripts/: check.sh
src/simult_chess/agents/: base.py  candidates.py  greedy.py  random_legal.py
src/simult_chess/core/: collision.py  geometry.py  legality.py  moves.py  phi.py  types.py  violation.py
src/simult_chess/core/stages/: annihilate.py  closure.py  defense.py  defense_seq.py  fizzle.py
src/simult_chess/harness/: campaign.py  campaign_stats.py  selfplay.py
src/simult_chess/interop/: __init__.py  encoding.py  openspiel_adapter.py
src/simult_chess/invariants/: checks.py  harness.py  repro.py  resolution_checks.py  severity.py
src/simult_chess/learn/: __init__.py  action_grid.py  agent.py  config.py  diagnostics.py  evaluate.py  exploit.py  nashconv.py  net.py  search.py  selfplay.py  train.py
src/simult_chess/net/: cli.py  commitment.py  protocol.py  session.py  transport.py
src/simult_chess/referee/: match.py  observe.py  serialize.py  setup.py
src/simult_chess/rules/: registry.py  ruleset.py
src/simult_chess/solver/: __init__.py  agent.py  lp.py  stage_matrix.py  supports.py
src/simult_chess/ui/: board_render.py  cli.py  notation.py  session.py
tests/property/: conftest.py  test_geometry_cross_validation.py  test_m1_purity.py  test_m2_order_independence.py  test_m3_color_swap_equivariance.py  test_m4_reservation_order.py  test_m5_symmetric_value.py  test_scenario_generator.py
tests/unit/: conftest.py  test_action_grid.py  test_action_grid_masking.py  test_agent.py  test_agents.py  test_annihilate.py  test_board_render.py  test_campaign.py  test_cli.py  test_closure.py  test_collision.py  test_defense.py  test_defense_seq.py  test_diagnostics.py  test_encoding.py  test_evaluate_ladder.py  test_exploit.py  test_fizzle.py  test_geometry.py  test_harness.py  test_learn_quarantine.py  test_legality.py  test_match.py  test_moves.py  test_nashconv.py  test_net.py  test_net_commitment.py  test_net_protocol.py  test_net_session.py  test_net_transport.py  test_notation.py  test_observe.py  test_openspiel_adapter.py  test_openspiel_conformance.py  test_openspiel_smoke.py  test_phi.py  test_repro.py  test_resolution_checks.py  test_search_matching_pennies.py  test_selfplay.py  (+13 more)
