[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simult-chess"
version = "0.1.0"
description = "A deterministic, zero-sum, two-player simultaneous-move chess variant."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = []

[project.optional-dependencies]
# Test-only cross-validator of hand-rolled geometry (Phase 9b) and UI board
# rendering (Phase 7). Never imported by simult_chess.core or
# simult_chess.rules (DEVELOPMENT.md §3.4). GPL-3.0-or-later, kept as an
# optional extra so the copyleft obligation never attaches to the core.
oracle = ["chess>=1.11.2"]
# Stage-matrix/LP solver layer (Phase 10, ruling A7). Quarantined behind this
# extra, same pattern as `oracle`'s `chess` dependency, so core/rules stay
# standard-library only; only simult_chess.solver may import numpy/scipy.
solver = ["numpy>=1.26", "scipy>=1.11"]
# pyspiel simultaneous-move adapter (Phase 12). Quarantined behind this
# extra, same pattern as oracle/solver: core/rules/referee never import
# pyspiel, only simult_chess.interop may.
openspiel = ["open_spiel>=1.5", "numpy>=1.26"]
# LIGHT-profile self-play learning system (Phase 13b, docs/LEARNING_DESIGN.md).
# Quarantined behind this extra, same pattern as oracle/solver/openspiel: only
# simult_chess.learn imports torch; core/rules/referee stay torch-free (checked
# by tests/unit/test_learn_quarantine.py). The SM-MCTS hot path runs on the
# native State + phi directly (design §2.3/§4), so pyspiel is not a runtime dep.
learn = ["torch>=2.1", "numpy>=1.26"]
dev = ["ruff", "mypy", "pytest", "hypothesis"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
mypy_path = "src"
packages = ["simult_chess"]

[[tool.mypy.overrides]]
# scipy ships partial/no inline type information; numpy is fully typed and
# needs no override. Solver-only (A7) -- core/rules never import either.
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# pyspiel is a compiled pybind11 extension with no type stubs. interop-only
# (Phase 12) -- core/rules/referee never import it.
module = "pyspiel"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: exhaustive/high-volume checks excluded from scripts/check.sh's fast gate",
]
